--- a/requirements.txt
+++ b/requirements.txt
@@ -10,17 +10,22 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 colorama==0.4.3
+coverage==5.5
 cryptography==3.4.8
 Django==3.2.7
+django-nose==1.4.7
 djangorestframework==3.12.4
 docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
 future==0.16.0
+gunicorn==20.1.0
 idna==3.2
 jmespath==0.10.0
 jsonschema==3.2.0
+mysqlclient==2.0.3
+nose==1.3.7
 paramiko==2.7.2
 pathspec==0.5.9
 pycparser==2.20
@@ -39,5 +44,3 @@ texttable==1.6.4
 urllib3==1.26.6
 wcwidth==0.1.9
 websocket-client==0.59.0
-gunicorn==20.1.0
-mysqlclient==2.0.3
