--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,16 @@ services:
       - "8082:80"
     depends_on:
       - mysql
+  redis:
+    image: "redis:alpine"
+    command: redis-server --requirepass ${REDIS_PASS}
+    ports:
+     - '6379:6379'
+    volumes:
+     - $PWD/redis-data:/var/lib/redis
+      - $PWD/redis.conf:/usr/local/etc/redis/redis.conf
+    environment:
+     - REDIS_REPLICATION_MODE=master
 volumes: 
     mysql-data:
     staticfiles:
